@@ -2704,8 +2704,12 @@ class EbuildBuild(CompositeTask):
 		be released when merge() is called.
 		"""
 
-		if self._default_exit(packager) == os.EX_OK and \
-			self.opts.buildpkgonly:
+		if self._default_exit(packager) != os.EX_OK:
+			self._unlock_builddir()
+			self.wait()
+			return
+
+		if self.opts.buildpkgonly:
 			# Need to call "clean" phase for buildpkgonly mode
 			portage.elog.elog_process(self.pkg.cpv, self.settings)
 			phase = "clean"
@@ -2716,9 +2720,10 @@ class EbuildBuild(CompositeTask):
 			self._start_task(clean_phase, self._clean_exit)
 			return
 
-		if self._final_exit(packager) != os.EX_OK or \
-			self.opts.buildpkgonly:
-			self._unlock_builddir()
+		# Continue holding the builddir lock until
+		# after the package has been installed.
+		self._current_task = None
+		self.returncode = packager.returncode
 		self.wait()
 
 	def _clean_exit(self, clean_phase):
@@ -11686,6 +11691,7 @@ def post_emerge(root_config, myopts, mtimedb, retval):
 	counter_hash = settings.get("PORTAGE_COUNTER_HASH")
 	if counter_hash is not None and \
 		counter_hash == vardbapi._counter_hash():
+		display_news_notification(root_config, myopts)
 		# If vdb state has not changed then there's nothing else to do.
 		sys.exit(retval)
 
